 * #1419 (BoundingVolumeHierarchy segaults/hangs)
 * #1423 (The computeSilvermanBandwidth of the HistogramFactory has no help)
 * #1432 (Expected improvement-based EfficientGlobalOptimization stopping criterion could be improved)
 * #1437 (OrderStatisticsMarginalChecker bound message)
 * #1438 (Normal distribution: computeComplementaryCDF)
 * #1448 (Memory consumption leads to crash)
 * #1449 (P1LagrangeInterpolation sometimes fails)
 * #1456 (truncation of distribution)
 * #1461 (ComparisonOperator().getImplementation().getClassName() segfault)
 * #1471 (The graphics of KarhunenLoeveQuadratureAlgorithm has no axes)

== 1.14 release (2019-11-13) == #release-1.14

=== Library ===

==== IMPORTANT: Distributions parametrization changes ====
 * New argument ordering in Frechet ctor: scale(beta), shape(alpha), location(gamma) (swapped alpha and beta)
 * New parametrization in Gumbel: scale(beta), position(gamma) (beta=1/alpha for first argument)
 * New parametrization in Beta: shape(alpha), shape(beta), location(a), location(b) (beta=t-r for second argument)
 * New parametrization in InverseGamma: rate(lambda), shape(k) (swapped arguments)
 * New parametrization in InverseNormal: location(mu), rate(lambda) (swapped arguments)
 * New parametrization in Laplace: mean(mu), rate(lambda) (swapped arguments)
 => One can use "import openturns.shims as ot" to maintain compatibility with older scripts

==== Major changes ====
 * New optimization solvers (Dlib, Bonmin for mixed integer optimization problems)
 * New distributions (SquaredNormal, WeibullMax, Pareto, DiscreteCompoundDistribution, MixedHistogramUserDefined)
 * New estimators (ParetoFactory, GeneralizedExtremeValueFactory, LeastSquaresDistributionFactory, PlackettCopulaFactory)
 * New copulas (JoeCopula, MarshallOlkinCopula, PlackettCopula)
 * Linear model learner (LinearModelStepwiseAlgorithm)
 * System events (IntersectionEvent, UnionEvent, SystemFORM, MultiFORM)

==== New classes ====
 * Dlib
 * SquaredNormal